atualizando e melhorando metodos